<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/container_layout"
  android:orientation="vertical"
  android:padding="32dp"
  >

    <TextView
      android:id="@+id/card_num_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/card_number"
      android:textSize="16sp"/>

    <com.justifi.InputView
      android:id="@+id/cardNumber"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/card_number_hint"
      android:layout_marginBottom="32dp"
      android:maxLength="16"/>

    <TextView
      android:id="@+id/expiration_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expiration"
      android:textSize="16sp"/>

    <com.justifi.InputView
      android:id="@+id/mm"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberSigned"
      android:hint="@string/expiration_mm"
      android:maxLength="2"/>

    <com.justifi.InputView
      android:id="@+id/yy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberSigned"
      android:hint="@string/expiration_yy"
      android:maxLength="2"/>

    <TextView
      android:id="@+id/cvv_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/cvv"
      android:textSize="16sp"/>

    <com.justifi.InputView
      android:id="@+id/cvv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/cvv"
      android:inputType="numberSigned"
      android:layout_marginBottom="32dp"
      android:maxLength="4"/>

</LinearLayout>
